--- a/app_template.html
+++ b/app_template.html
@@ -246,11 +246,11 @@ html, body {
   cursor: pointer;
   transition: background 0.15s;
   transition: color 0.13s;
-  color: #053333;
+  color: #7a2d1f;
 }
 
 .nav-btn:hover, .nav-btn:focus {
-  color: #9B3928;
+  color: #053333;
 }
 
 #focus-modal .focused-cards-outer {
@@ -297,7 +297,7 @@ html, body {
 }
 
 .remove-btn:hover, .remove-btn:focus {
-  color: #9B3928;
+  color: #7a2d1f;
   opacity: 1;
   outline: none;
 }
@@ -311,7 +311,7 @@ html, body {
 
 @keyframes outline-flash {
   0%   { outline-width: 0px; outline-offset: 0px; }
-  20%  { outline-width: 6px;  outline-offset: -2px; }
+  20%  { outline-width: 4px;  outline-offset: -1px; }
   100% { outline-width: 0px;  outline-offset: 0px; }
 }
 
@@ -340,9 +340,6 @@ html, body {
   <script>
     // slugs is a dict of categories -> [list of card slugs]
   SLUGS_MAP
-
-  // const svgBase = "https://olli.saarikivi.fi/card/";
-  const svgBase = "card/";
 
   // Render categories and their cards
   const categoriesRow = document.getElementById("categories-row");
@@ -382,7 +379,7 @@ html, body {
       svgWrap.className = "svg-wrap";
 
       const obj = document.createElement("object");
-      obj.data = `${svgBase}${slug}.svg`;
+      obj.data = `${slug}.svg`;
       obj.type = "image/svg+xml";
       obj.className = "svg-obj";
       obj.setAttribute("aria-label", `${slug} recipe card`);
@@ -419,12 +416,36 @@ html, body {
     categoriesRow.appendChild(col);
   });
 
+  const SVG_LINK_STYLE = `
+a {
+  color: #511e15;
+  text-decoration: none;
+}
+a:hover, a:focus {
+  color: #053333;
+}
+
+/* Make link contents follow that color */
+a text, a tspan { fill: currentColor !important; }
+a path, a rect, a circle, a polygon, a polyline, a line {
+  stroke: currentColor !important;
+  fill: currentColor !important; /* in case your text was converted to paths */
+}
+`;
+
+  function injectSvgStyles(svgDoc) {
+    const styleEl = svgDoc.createElementNS('http://www.w3.org/2000/svg', 'style');
+    styleEl.textContent = SVG_LINK_STYLE;
+    svgDoc.documentElement.appendChild(styleEl);
+  }
+
   function wireSvgObject(obj, owningCard, wrapEl) {
     const doWire = () => {
       wrapEl && wrapEl.classList.add('loaded');
 
       const svgDoc = obj.contentDocument;
       if (!svgDoc) return;
+      injectSvgStyles(svgDoc);
 
       // Intercept recipe-card links
       svgDoc.querySelectorAll('a').forEach(a => {
