--- a/app_template/index.html
+++ b/app_template/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Recipe Cards</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#214545">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="icon-180.png">
   <link rel="stylesheet" href="https://fontlibrary.org//face/coelacanth" type="text/css"/>
   <style>
 :root {
@@ -41,7 +44,7 @@
 }
 
 html, body {
-  color: #062525;
+  color: #122121;
   background: #f8f8f7;
   margin: 0;
   padding: 0;
