--- a/app_template/index.html
+++ b/app_template/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Recipe Cards</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="theme-color" content="#214545">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" href="icon-180.png">
+  <link rel="icon" href="icon-192.png" type="image/png">
   <link rel="stylesheet" href="https://fontlibrary.org//face/coelacanth" type="text/css"/>
   <style>
 :root {
@@ -50,6 +52,12 @@ html, body {
   padding: 0;
   font-family: "Georgia", serif;
   min-height: 100vh;
+}
+body {
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 .container {
   display: flex;
@@ -340,8 +348,23 @@ html, body {
     </div>
   </div>
 
-  <script>
-    // slugs is a dict of categories -> [list of card slugs]
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js').then(reg => {
+      reg.onupdatefound = () => {
+        const newWorker = reg.installing;
+        newWorker.onstatechange = () => {
+          if (newWorker.state === "installed" && navigator.serviceWorker.controller) {
+            if (confirm("New recipes are available. Reload now?")) {
+              window.location.reload();
+            }
+          }
+        };
+      };
+    });
+  }
+
+  // slugs is a dict of categories -> [list of card slugs]
   SLUGS_MAP
 
   // Render categories and their cards
