--- a/app_template/index.html
+++ b/app_template/index.html
@@ -54,7 +54,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Georgia", serif;
-  min-height: 100vh;
+  min-height: 100svh;
 }
 body {
   padding-left: env(safe-area-inset-left);
@@ -262,6 +262,7 @@ body {
   transition: background 0.15s;
   transition: color 0.13s;
   color: #7a2d1f;
+  font-family: 'Coelacanth', Georgia, serif;
 }
 
 .nav-btn:hover, .nav-btn:focus {
@@ -269,7 +270,7 @@ body {
 }
 
 #focus-modal .focused-cards-outer {
-  height: 100vh;
+  height: 100svh;
   width: 100vw;
   box-sizing: border-box;
   padding-top: 4.2rem;
@@ -352,12 +353,12 @@ a path, a rect, a circle, a polygon, a polyline, a line {
   </div>
 
   <!-- Show Focused Cards Button -->
-  <button id="show-focused-btn" class="nav-btn" style="display:none;">Focus</button>
+  <button id="show-focused-btn" class="nav-btn" style="display:none;">focus</button>
 
   <!-- Focused Cards Modal -->
   <div id="focus-modal" aria-modal="true" role="dialog" tabindex="-1">
     <div class="modal-header">
-      <button id="close-focus-modal" class="nav-btn" aria-label="Back to all cards">Back</button>
+      <button id="close-focus-modal" class="nav-btn" aria-label="Back to all cards">back</button>
     </div>
     <div class="focused-cards-outer">
       <div class="focused-cards-grid" id="focused-cards-grid">
@@ -535,6 +536,7 @@ a path, a rect, a circle, a polygon, a polyline, a line {
     const expanded = getAllExpandedCards();
     const btn = document.getElementById('show-focused-btn');
     btn.style.display = expanded.length ? "flex" : "none";
+    btn.innerText = expanded.length === 1 ? `${expanded.length} card` : `${expanded.length} cards`;
   }
   updateShowFocusedBtn();
 
