--- a/app_template/index.html
+++ b/app_template/index.html
@@ -21,31 +21,8 @@
   --card-width: calc(var(--cbw) * var(--cs));
   --card-width-expanded: calc(var(--cbw) * var(--cs) + var(--card-expansion));
   --card-height-collapsed: calc(0.5in * var(--cs));
-}
-
-@media (max-width: 6.5in) {
-  .category-col,
-  .card.expanded {
-    width: 100% !important;
-    min-width: 0 !important;
-    max-width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-  .card {
-    width: 97% !important;
-    min-width: 0 !important;
-    max-width: 97% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-
- /* --- Focus modal --- */
-  #focus-modal .focused-cards-grid {
-    grid-template-columns: 1fr !important;
-    width: 100% !important;
-    padding: 0 !important;
-  }
+  --card-height-collapsed-mobile: 8.5vw;
+  --card-popup-mobile: 1.5vw;
 }
 
 html, body {
@@ -359,6 +336,53 @@ a text, a tspan { fill: currentColor !important; }
 a path, a rect, a circle, a polygon, a polyline, a line {
   stroke: currentColor !important;
   fill: currentColor !important; /* in case your text was converted to paths */
+}
+
+@media (max-width: 6.5in) {
+  .category-col,
+  .card.expanded {
+    width: 100%;
+    min-width: 0;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .card {
+    width: 97%;
+    min-width: 0;
+    max-width: 97%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .card.collapsed {
+    height: 9vw;
+    min-height: 9vw;
+    max-height: 9vw;
+  }
+
+  .card.collapsed:hover {
+    margin-top: calc(-1.5vw);
+    height: calc(9vw + 1.5vw);
+    min-height: calc(9vw + 1.5vw);
+    max-height: calc(9vw + 1.5vw);
+  }
+
+  .card.collapsed:last-child:hover {
+    margin-bottom: 1.5vw;
+  }
+
+  .card.collapsed:last-child {
+    height: auto;
+    min-height: 0;
+    max-height: none;
+  }
+
+ /* --- Focus modal --- */
+  #focus-modal .focused-cards-grid {
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 0;
+  }
 }
   </style>
 </head>
